--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
                                         </div>
                                         <div class="expandable entry-body">
                                             <div class="zm-item-vote">
-                                                <a class="zm-item-vote-count js-expand js-vote-count" href="javascript:;" data-bind-votecount="">$!{vo.followCount}</a></div>
+                                                <a class="zm-item-vote-count js-expand js-vote-count" href="javascript:;" data-bind-votecount="">4168</a></div>
                                             <div class="zm-item-answer-author-info">
                                                 <a class="author-link" data-tip="p$b$amuro1230" target="_blank" href="/user/$!{vo.user.id}">$!{vo.user.name}</a>
                                                 ，$date.format('yyyy-MM-dd HH:mm:ss', $!{vo.question.createdDate})</div>
@@ -45,7 +45,7 @@
                                                         <span class="js-voteCount">4168</span>&nbsp;人赞同</a></span>
                                             </div>
                                             <div class="zm-item-rich-text expandable js-collapse-body" data-resourceid="123114" data-action="/answer/content" data-author-name="李淼" data-entry-url="/question/19857995/answer/13174385">
-                                                <div class="zh-summary summary clearfix">$!{vo.question.content}</div>
+                                                <div class="zh-summary summary clearfix">${vo.question.content}</div>
                                             </div>
                                         </div>
                                         <div class="feed-meta">
@@ -54,7 +54,7 @@
                                                     <a data-follow="q:link" class="follow-link zg-follow meta-item" href="javascript:;" id="sfb-123114">
                                                         <i class="z-icon-follow"></i>关注问题</a>
                                                     <a href="#" name="addcomment" class="meta-item toggle-comment js-toggleCommentBox">
-                                                        <i class="z-icon-comment"></i>$!{vo.question.commentCount} 条评论</a>
+                                                        <i class="z-icon-comment"></i>${vo.question.commentCount} 条评论</a>
 
 
                                                     <button class="meta-item item-collapse js-collapse">
@@ -73,6 +73,4 @@
             </div>
         </div>
     </div>
-#parse("js.html")
-<script type="text/javascript" src="/scripts/main/site/detail.js"></script>
 #parse("footer.html")
